# kite

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Effects/: EffectBase.h
Source/Effects/Compressor/: Compressor.cpp  Compressor.h
